--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "version": "0.1.0",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "connect-livereload": "~0.2.0",
+    "grunt-open": "~0.2.0",
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
