--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-contrib-sass": "~0.8.1",
+    "grunt-autoprefixer": "~1.0.1",
     "connect-livereload": "~0.2.0",
     "grunt-open": "~0.2.0",
     "grunt-contrib-watch": "~0.6.1"
