--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "version": "0.1.0",
   "license": "MIT",
   "devDependencies": {
+    "load-grunt-tasks": "~0.6.0",
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-sass": "~0.8.1",
     "grunt-autoprefixer": "~1.0.1",
+    "grunt-contrib-connect": "~0.3.0",
     "connect-livereload": "~0.2.0",
     "grunt-open": "~0.2.0",
     "grunt-contrib-watch": "~0.6.1"
